--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello Wordl
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+  </head>
+  <body>
+    <h2>Hello World</h2>
+
+  </body>
+</html>
